--- a/index.html
+++ b/index.html
@@ -7,133 +7,220 @@
     <title>WAVIE FILM</title>
     <link rel="stylesheet" href="assets\css\style1.css"/>
     <script src="assets\js\final.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 <body>
-<div class="nav" id="nav">
-  <label class="logo" style="color: rgb(222, 27, 27);">Wavie</label>
- <nav>
-    <ul class="nav_list">
-      <li><a href="#" style="text-transform:uppercase">Home</a></li>
-      <li><a href="#" style="text-transform:uppercase">History</a></li>
-      <li><a href="#" style="text-transform:uppercase">Genre</a></li>
-      <li><a href="register.html" style="text-transform:uppercase">Register</a></li>
-      <li><a href="login.html" style="text-transform:uppercase">Login</a></li>
-    </ul>
+<div class="topnav" id="myTopnav">
+  <nav>
+    <a href="#" style="text-transform:uppercase; color: rgb(222, 27, 27);">WAVIE</a>
+    <a href="#" style="text-transform:uppercase">Home</a>
+    <a href="#" style="text-transform:uppercase">History</a>
+    <a href="#" style="text-transform:uppercase">Genre</a>
+    <a href="#" style="text-transform:uppercase">Register</a>
+    <a href="#" style="text-transform:uppercase">Login</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
   </nav>
 </div>
 <div class="container">
-    <center>
-        <h1 style="padding-top: 130px;">Unlimited movies, TV shows, <br>and more.</h1>
-        <h2> Watch anywhere. Cancel anytime.</h2> 
-        <div class="space"></div>
-        <div class="row">
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-danger">Free</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="btn btn-danger">Vip</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-danger">Vip+</a>
-                  </div>
-                </div>
-              </div>
-          </div>
-    </center>
-    <div class="space"></div>
-    <div class="row">
-        <h2>Wavie Original</h2>
-        <div class="row_posters">
-          <img src="assets\img\imagesgoblin.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imagesboruto.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imageskny.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\demonslay123.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imagesaqua.jpg"alt=""class="row_poster row_posterLarge"/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="row_posters">
-          <img src="assets\img\imagesoblivion.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imagesstarwar.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imagesglory4.jpg"alt=""class="row_poster row_posterLarge"/>
-          <img src="assets\img\imagesspider.jpg"alt=""class="row_poster row_poster Large"/>
-          <img src="assets\img\images1920.jpg"alt=""class="row_poster row_poster Large"/>
-        </div>
-    </div>
+  <center>
+    <h1 style="padding-top: 130px;">Unlimited movies, TV shows, <br>and more.</h1>
+      <h2> Watch anywhere. Cancel anytime.</h2> 
+      <div class="space"></div>
+      <h2 class="type">
+        <span>
+        <span>Watch for free</span>
+        <span>Watch streaming</span>
+        <span>Enjoy your movie</span>
+        </span>
+      </h2>
+  </center>  
 </div>
-<!-- Footer -->
-<footer class="bg-black">
-    <div class="container py-5">
-      <div class="row py-4">
-        <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="img/logo.png" alt="" width="180" class="mb-3">
-          <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-          <ul class="list-inline mt-4">
-            <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a></li>
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted">For Women</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">For Men</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Stores</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Our Blog</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
-          <ul class="list-unstyled mb-0">
-            <li class="mb-2"><a href="#" class="text-muted">Login</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Register</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li>
-            <li class="mb-2"><a href="#" class="text-muted">Our Products</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-lg-0">
-          <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
-          <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
-          <div class="p-1 rounded border">
-            <div class="input-group">
-              <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
-              <div class="input-group-append">
-                <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="space"></div>    
+<div class="container">
+  <div class="row" style="padding-right: 80px; padding-left: 80px;">
+    <h2 style="padding-bottom: 10px;">Select plann</h2>
+    <div class="column">
+      <div class="card">
+        <h3>Free plann</h3>
+        <p>Some text</p>
+        <div class="space-text-button"></div>
+        <button class="button">Plan</button>
       </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <h3>Premiun plann</h3>
+        <p>Some text</p>
+        <div class="space-text-button"></div>
+        <button class="button">Plan</button>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <h3>Vip plann</h3>
+        <p>Some text</p>
+        <div class="space-text-button"></div>
+        <button class="button">Plan</button>
+      </div>
+    </div>
+    <div class="column">
+      <div class="card">
+        <h3>Vip+ plann</h3>
+        <p>Some text</p>
+        <div class="space-text-button"></div>
+        <button class="button">Plan</button>
+      </div>
+    </div>
+  </div>
+  <div class="space"></div> 
+  <h2 style="padding-bottom: 10px; padding-left: 80px;">Movie List</h2>
+    <ul class="card-wrapper">
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+      <li class="card-film">
+        <img src="assets/img/demonslay.jpg" alt="film">
+        <h3>A Super Wonderful Headline</h3>
+        <p>Lorem ipsum sit dolor amit</p>
+      </li>
+    </ul>
+</div>
+<div class="space"></div>
+  <h2 style="padding-bottom: 10px; padding-left: 80px;">Popular</h2>
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="assets/img/demonslay123.jpg" style="width:100%">
+      <div class="text">FILM 1</div>
+    </div>
+    
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="assets/img/imageess.jpg" style="width:100%">
+      <div class="text">FILM 2</div>
+    </div>
+    
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="assets/img/starwar.jpg" style="width:100%">
+      <div class="text">FILM 3</div>
+    </div>
+  </div>
+  <br>
+  <div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+  </div>
+ <div class="space"></div>
+<footer class="footer-distributed">
+
+    <div class="footer-left">
+      <h3>About<span style="text-transform:uppercase; color: rgb(222, 27, 27);"> WAVIE</span></h3>
+
+      <p class="footer-links">
+        <a href="#">Home</a>
+        |
+        <a href="#">History</a>
+        |
+        <a href="#">Genre</a>
+        |
+        <a href="#">Register</a>
+      </p>
+      <p class="footer-company-name">© 2022<span style="text-transform:uppercase; color: rgb(222, 27, 27);"> WAVIE</span></p>
     </div>
 
-    <!-- Copyrights -->
-    <div class="bg-black py-4">
-      <div class="container text-center">
-        <p class="text-muted mb-0 py-2">© 2019 Bootstrapious All rights reserved.</p>
+    <div class="footer-center">
+      <div>
+        <i class="fa fa-map-marker"></i>
+          <p><span>Jogjakarta blabla</p>
+      </div>
+
+      <div>
+        <i class="fa fa-phone"></i>
+        <p>1231231311</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="https://www.samuelpasaribu.com">promotor@wavie.com</a></p>
       </div>
     </div>
-  </footer>
-  <!-- End -->
+    <div class="footer-right">
+      <p class="footer-company-about">
+        <span>About the company</span>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo doloremque earum eveniet quibusdam neque sequi minima ipsum esse accusamus omnis cumque beatae tempore tempora, molestiae quisquam. Harum corporis quaerat praesentium.
+      <div class="footer-icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-youtube"></i></a>
+      </div>
+    </div>
+</footer>
 </body>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+      x.className += " responsive";
+    } else {
+      x.className = "topnav";
+    }
+  }
+
+  let slideIndex = 0;
+  showSlides();
+
+  function showSlides() {
+    let i;
+    let slides = document.getElementsByClassName("mySlides");
+    let dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}    
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";  
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
+  }
+</script>
 </html>
