--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <div class="topnav" id="myTopnav">
   <nav>
     <a href="#" style="text-transform:uppercase; color: rgb(222, 27, 27);">WAVIE</a>
-    <a href="#" style="text-transform:uppercase">Home</a>
+    <a href="index.html" style="text-transform:uppercase">Home</a>
     <a href="#" style="text-transform:uppercase">History</a>
     <a href="#" style="text-transform:uppercase">Genre</a>
-    <a href="#" style="text-transform:uppercase">Register</a>
-    <a href="#" style="text-transform:uppercase">Login</a>
+    <a href="register.html" style="text-transform:uppercase">Register</a>
+    <a href="login.html" style="text-transform:uppercase">Login</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
