--- a/index.html
+++ b/index.html
@@ -30,50 +30,15 @@
       <div class="space"></div>
       <h2 class="type">
         <span>
-        <span>Watch for free</span>
-        <span>Watch streaming</span>
-        <span>Enjoy your movie</span>
+        <span style="color:red;">Watch for free</span>
+        <span style="color:red;">Watch streaming</span>
+        <span style="color:red;">Enjoy your movie</span>
         </span>
       </h2>
   </center>  
 </div>
 <div class="space"></div>    
 <div class="container">
-  <div class="row" style="padding-right: 80px; padding-left: 80px;">
-    <h2 style="padding-bottom: 10px;">Select plann</h2>
-    <div class="column">
-      <div class="card">
-        <h3>Free plann</h3>
-        <p>Some text</p>
-        <div class="space-text-button"></div>
-        <button class="button">Plan</button>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <h3>Premiun plann</h3>
-        <p>Some text</p>
-        <div class="space-text-button"></div>
-        <button class="button">Plan</button>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <h3>Vip plann</h3>
-        <p>Some text</p>
-        <div class="space-text-button"></div>
-        <button class="button">Plan</button>
-      </div>
-    </div>
-    <div class="column">
-      <div class="card">
-        <h3>Vip+ plann</h3>
-        <p>Some text</p>
-        <div class="space-text-button"></div>
-        <button class="button">Plan</button>
-      </div>
-    </div>
-  </div>
   <div class="space"></div> 
   <h2 style="padding-bottom: 10px; padding-left: 80px;">Movie List</h2>
     <ul class="card-wrapper">
@@ -146,7 +111,7 @@
     <span class="dot"></span> 
     <span class="dot"></span> 
   </div>
- <div class="space"></div>
+<div class="space"></div>
 <footer class="footer-distributed">
 
     <div class="footer-left">
