--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <h3>Free plann</h3>
         <p>Some text</p>
         <div class="space-text-button"></div>
-        <button class="button" id="modalbutton">Plan</button>
       </div>
     </div>
     <div class="column">
@@ -56,7 +55,6 @@
         <h3>Subscription plann</h3>
         <p>Some text</p>
         <div class="space-text-button"></div>
-        <button class="button">Plan</button>
       </div>
     </div>
     <div class="column">
@@ -64,7 +62,6 @@
         <h3>Vip plann</h3>
         <p>Some text</p>
         <div class="space-text-button"></div>
-        <button class="button">Plan</button>
       </div>
     </div>
     <div class="column">
@@ -72,10 +69,11 @@
         <h3>Vip+ plann</h3>
         <p>Some text</p>
         <div class="space-text-button"></div>
-        <button class="button">Plan</button>
       </div>
     </div>
   </div>
+  <div class="space"></div>
+  <center><button class="button" id="modalbutton">Getting started</button></center>
   <div class="space"></div>
   <!-- Modal payment -->
   <div id="modalpayment" class="modal">
@@ -196,6 +194,7 @@
     <span class="dot"></span> 
   </div>
 <div class="space"></div>
+</body>
 <footer class="footer-distributed">
 
     <div class="footer-left">
@@ -241,7 +240,6 @@
       </div>
     </div>
 </footer>
-</body>
 <script>
   function myFunction() {
     var x = document.getElementById("myTopnav");
