--- a/index.html
+++ b/index.html
@@ -46,28 +46,50 @@
     <div class="column">
       <div class="card">
         <h3>Free plann</h3>
-        <p>Some text</p>
+        <br>
+        <ul>
+          <li style="text-align: left;">Free film</li>
+          <li style="text-align: left;">unlimited</li>
+          <li style="text-align: left;">casual film</li>
+          <br>
+        </ul>
         <div class="space-text-button"></div>
       </div>
     </div>
     <div class="column">
       <div class="card">
         <h3>Subscription plann</h3>
-        <p>Some text</p>
+        <br>
+        <ul>
+          <li style="text-align: left;">All genres</li>
+          <li style="text-align: left;">film unlimited</li>
+          <li style="text-align: left;">film anime</li>
+          <br>
+        </ul>
         <div class="space-text-button"></div>
       </div>
     </div>
     <div class="column">
       <div class="card">
         <h3>Vip plann</h3>
-        <p>Some text</p>
+        <br>
+        <ul>
+          <li style="text-align: left;">All genres</li>
+          <li style="text-align: left;">film unlimited</li>
+          <li style="text-align: left;">vip film unlimited 1 month</li>
+        </ul>
         <div class="space-text-button"></div>
       </div>
     </div>
     <div class="column">
       <div class="card">
         <h3>Vip+ plann</h3>
-        <p>Some text</p>
+        <br>
+        <ul>
+          <li style="text-align: left;">All genres</li>
+          <li style="text-align: left;">film unlimited</li>
+          <li style="text-align: left;">vip film unlimited 2 month</li>
+        </ul>
         <div class="space-text-button"></div>
       </div>
     </div>
@@ -125,6 +147,7 @@
     </div>
   </div>
   <!-- END bagian teman Akbar -->
+  
   <h2 style="padding-bottom: 10px; padding-left: 80px;">Movie List</h2>
     <ul class="card-wrapper">
       <li class="card-film">
