--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </h2>
   </center>  
 </div>
-<!-- Bagian teman Akbar -->
+<!-- Bagian Faisal -->
 <div class="space"></div>    
 <div class="container">
   <div class="space"></div> 
@@ -146,8 +146,8 @@
       <br><br>
     </div>
   </div>
-  <!-- END bagian teman Akbar -->
-  
+  <!-- END bagian Faisal -->
+
   <h2 style="padding-bottom: 10px; padding-left: 80px;">Movie List</h2>
     <ul class="card-wrapper">
       <li class="card-film">
